deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: pooja
        image: pooja1999/docker-file
        ports:
        - containerPort: 8000
