ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pooja-ingress

 

spec:
  ingressClassName: nginx
  rules:
  - host: pooja-sangwan.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 80
